Fix interaction with player name on mobile screens

--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -188,16 +188,16 @@
 
     .description div {
         align-items: flex-end;
-        pointer-events: none;
+        /*pointer-events: none;*/
         inset: auto 0 0;
         padding: 2rem;
-        height: 200px;
+        /*height: 200px;*/
         background: linear-gradient(
                 to bottom,
                 transparent 0%,
                 rgb(var(--background-end-rgb)) 40%
         );
-        z-index: 1;
+        z-index: 3;
     }
 }
 
